# zuna

./: .gitignore  pyproject.toml
src/zuna/inference/AY2l/lingua/apps/AY2latent_bci/: eeg_eval.py
src/zuna/preprocessing/: batch.py  normalizer.py  processor.py
tutorials/: run_zuna_pipeline.py
