[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "zuna"
version = "0.1.1"
description = "Foundation model for EEG reconstruction and interpolation"
readme = "README.md"
requires-python = ">=3.8"
license = "Apache-2.0"
authors = [
    {name = "Christopher Warner", email = "chris@zyphra.com"},
    {name = "Jonas Mago"},
    {name = "JR Huml"},
    {name = "Beren Millidge", email = "beren@zyphra.com"}
]

keywords = ["eeg", "foundation-model", "neuroscience", "preprocessing"]

dependencies = [
    "numpy>=1.20.0",
    "scipy>=1.7.0",
    "mne>=1.0.0",
    "torch>=1.9.0",
    "joblib>=1.0.0",
    "omegaconf",
    "sentencepiece",
    "tiktoken",
    "fsspec",
    "blobfile",
    "wandb",
    "lm-eval",
    "nvidia-ml-py", 
    "transformers", 
    "huggingface-hub", 
    "einops", 
    "vector-quantize-pytorch", 
    "schedulefree", 
    "boto3", 
    "python-dotenv",
    "ipython"
]

# Handle import paths so that single pip install -e . exposes zuna, lingua, and apps (embedded AY2l)
[tool.setuptools.package-dir]
"" = "./"

# Include the config in pip site-packages
[tool.setuptools.package-data]
"*" = ["configs/*.yaml"]

[tool.setuptools.packages.find]
where = ["src", "src/zuna/inference/AY2l/lingua"]
include = ["zuna*", "lingua*", "apps*"]

[project.urls]
Homepage = "https://www.zyphra.com"
Repository = "https://github.com/Zyphra/zuna"
